@@ -25,6 +25,7 @@
     <!-- JAVA VERSION -->
     <properties>
         <java.version>21</java.version>
+        <lombok.version>1.18.44</lombok.version>
     </properties>
 
     <!-- DEPENDENCIES -->
@@ -76,6 +77,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
 
@@ -120,11 +122,10 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <release>${java.version}</release>
                 </configuration>
             </plugin>
 
